# olympiad-preparation

./: CHANGELOG.md  LICENSE.txt  README.md  index.html  next.config.ts  package.json  tsconfig.json
backend/: pyproject.toml
backend/app/: error_handlers.py  lifespan.py  main.py
backend/app/config/: __init__.py  constants.py  settings.py
backend/app/features/gemini/: __init__.py  constants.py  gemini_client.py  schemas.py  services.py
backend/app/features/word_game/: __init__.py  constants.py  data_loaders.py  nouns.pkl  router.py  schemas.py  services.py  utils.py
backend/app/shared/: enums.py
backend/src/: app.py  main.py  root.py  run.py
backend/src/api/: __init__.py  root.py
backend/src/config/: __init__.py  constants.py
backend/src/core/: __init__.py  constants.py  error_handlers.py
backend/src/features/gemini/: constants.py  services.py
backend/src/features/word_game/: __init__.py  constants.py  data_loaders.py  exceptions.py  router.py  schemas.py  services.py  types.py
backend/src/features/word_game/data/: prohibited_words.json
backend/src/shared/: __init__.py  schemas.py
backend/tests/: conftest.py  test_main.py  test_root.py
backend/tests/test_gemini/: conftest.py  test_services.py
backend/tests/test_word_game/: conftest.py  test_data_loaders.py  test_exceptions.py  test_router.py  test_services.py  test_utils.py
frontend/: .gitignore  .prettierrc  index.html  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/scripts/: generate_images_exports.py
scripts/: update_version.sh
(+164 files in other folders)
